# todo-app-for-learning-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
db/: create_todos.sql  setup_db.sh
src/: db.rs  main.rs  model.rs
